feat: Added past search saving methods